Fix update of layers with Destination Atop blendign mode

When switching the layer from Destination Atop blending
mode to any other mode, we should take the old extent into
account, because Destination Atop and Destination In modes
can change the layer's extent.

BUG:423533